5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4059/executions/1578_1328.log
== SUBMITION (2019-03-11 19:58:40) 
-- CODE:
print"700"
-- EXECUTION TIME:
0.191849
-- ERROR:
  File "/home/codebench/codes/1578/1328/main.py", line 1
    print"700"
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 19:58:52) 
-- CODE:
print("700")
-- EXECUTION TIME:
0.12741
-- TEST CASE 1:
---- input:
xxx
---- correct output:
700
---- user output:
700
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
